filter box changes

--- a/public/pana-theme.less
+++ b/public/pana-theme.less
@@ -29,6 +29,7 @@ body {
   .navbar-inverse .navbar-nav > .active > a:focus {
     color: #ffffff;
     background-color: #6baed6;
+    font-weight: bold;
   }
 }
 
@@ -70,6 +71,58 @@ body {
 }
 
 filter-bar .bar .filter {
-  background-color: #08519c;
   border-radius: 3px;
+}
+
+.navbar-inverse .logo {
+    width: inherit;
+    color: #2775D6;
+    font-size: 32px;
+    font-family: Helvetica;
+    font-weight: 900;
+    margin: 0px;
+    padding-top: 2px;
+    padding-right: 10px;
+    padding-left: 10px;
+    background-color: #F8F8F8;
+}
+
+li.search-box-li {
+    width: 700px;
+    padding-top: 8px;
+    padding-left: 100px;
+}
+
+.search-input {
+    float: left;
+    width: 100%;
+}
+
+.search-button {
+    float: right;
+    widht: 55px;
+    margin-left: -150px;
+}
+
+.menu-bar {
+    position: fixed;
+    top: 0px;
+    z-index: 10000;
+    margin-top: 0 !important;
+    width: 100%;
+}
+
+.filters-bar {
+    position: fixed;
+    top: 45px;
+    z-index: 10000;
+    width: 100%;
+}
+
+.app-container {
+  margin-top: 80px;
+}
+
+.tab-content {
+  margin-top: 20px;
 }
